--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-env": "^7.26.0",
     "@vue/language-plugin-pug": "^2.1.10",
     "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.9.2",
     "pug-plain-loader": "^1.1.0",
@@ -31,6 +33,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "swiper": "^11.1.14",
     "vue": "^3.5.12",
     "vue-loader": "^17.4.2"
   }
