--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "css-minimizer-webpack-plugin": "^7.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "image-minimizer-webpack-plugin": "^4.1.0",
     "image-webpack-loader": "^8.1.0",
+    "imagemin-webp": "^8.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "pug-plain-loader": "^1.1.0",
     "svg-sprite-loader": "^6.0.11",
