--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
-    "swiper": "^11.1.14",
+    "slick-carousel": "^1.8.1",
     "vue": "^3.5.12",
-    "vue-loader": "^17.4.2"
+    "vue-loader": "^17.4.2",
+    "vue-slick-carousel": "^1.0.6"
   }
 }
