--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "pinia": "^2.2.6",
     "slick-carousel": "^1.8.1",
     "vue": "^3.5.12",
