--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
-    "slick-carousel": "^1.8.1",
     "vue": "^3.5.12",
-    "vue-loader": "^17.4.2",
-    "vue-slick-carousel": "^1.0.6"
+    "vue-loader": "^17.4.2"
   }
 }
