--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.80.7",
     "sass-loader": "^16.0.3",
+    "sass-resources-loader": "^2.2.5",
     "svg-sprite-loader": "^6.0.11",
     "terser-webpack-plugin": "^5.3.10",
     "vue-style-loader": "^4.1.3",
